--- a/assets/sass/layout/navbar.scss
+++ b/assets/sass/layout/navbar.scss
@@ -10,7 +10,11 @@ nav {
 
         &:hover {
             strong {
-                background-color: #464646;
+                color: #ffffff;
+
+                span {
+                    color: #ccff00;
+                }
             }
         }
         &:hover, &:focus {
@@ -19,17 +23,17 @@ nav {
         }
 
         strong {
-            border-radius: 1rem;
             color: #ccff00;
             display: block;
             font-size: 2rem;
             line-height: 3.5rem;
             margin: 0.25rem;
             padding: 0 1.5rem;
-            transition: background-color 0.1s ease-in-out;
+            transition: color 0.3s;
 
             span {
                 color: #ffffff;
+                transition: inherit;
             }
         }
     }
