--- a/assets/sass/picture.scss
+++ b/assets/sass/picture.scss
@@ -1,6 +1,7 @@
 div#picture-presentation-container.container {
     background-color: #181818;
     border-radius: 0.3rem;
+    margin-bottom: 1.8rem;
     margin-top: 1.8rem;
     padding-bottom: 3.6rem;
     padding-top: 3.6rem;
