--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -8,7 +8,19 @@ body {
         @extend .hidden;
     }
 
+    a {
+        color: #ccff00;
+        transition: color 0.3s;
+
+        &:hover, &:focus {
+            color: #ffffff;
+            outline: 0;
+            text-decoration: none;
+        }
+    }
+
     // Layout files
+    @import "layout/footer";
     @import "layout/navbar";
 
     // Page files
