--- a/assets/sass/error/cod404.scss
+++ b/assets/sass/error/cod404.scss
@@ -1,13 +1,12 @@
 div#error-code404-container.container {
     background-color: #181818;
-    border: 0.1rem solid #2f2f2f;
     margin-top: 7rem;
     padding-bottom: 3.6rem;
     padding-top: 3.6rem;
     transform: skew(9deg);
 
     div.row {
-        div {
+        > div {
             cursor: default;
             transform: skew(-9deg);
 
