Divide picture content

--- a/assets/sass/picture.scss
+++ b/assets/sass/picture.scss
@@ -1,104 +1,1 @@
-div {
-    &#picture-presentation-container.container {
-        background-color: #181818;
-        border-radius: 0.3rem;
-        margin-bottom: 1.8rem;
-        margin-top: 1.8rem;
-        padding-bottom: 3.6rem;
-        padding-top: 3.6rem;
-
-        div.row {
-            &:nth-child(1) {
-                div {
-                    h3 {
-                        margin: 0.9rem 0;
-                        position: relative;
-
-                        a {
-                            bottom: 0;
-                            font-size: 1rem;
-                            position: absolute;
-                            right: 0;
-                        }
-                    }
-                }
-            }
-
-            &:nth-child(2) {
-                div {
-                    background-color: #000000;
-
-                    img {
-                        max-width: 100%;
-                    }
-                }
-            }
-
-            &:nth-child(3) {
-                padding-top: 1.8rem;
-
-                div {
-                    a {
-                        cursor: pointer;
-                    }
-
-                    div#qr-container {
-                        height: 0;
-                        overflow: hidden;
-                        transition: height 0.5s;
-                    }
-                }
-            }
-        }
-    }
-
-    &#picture-presentation-edit-container.container-fluid {
-        background-color: rgba(0, 0, 0, 0.7);
-        bottom: 0;
-        left: 0;
-        position: fixed;
-        right: 0;
-        top: 0;
-
-        div.row {
-            div#edit-box {
-                > div {
-                    background-color: #181818;
-                    padding: 1.8rem 0;
-                    position: relative;
-
-                    a#close {
-                        cursor: pointer;
-                        position: absolute;
-                        right: 0.8rem;
-                        top: 0.8rem;
-                    }
-
-                    div.alert {
-                        color: #ffffff;
-                        font-weight: bold;
-                        margin: 0 5rem;
-
-                        &.alert-danger {
-                            background-color: rgba(#cc0000, 0.2);
-                            border-color: #cc0000;
-                        }
-
-                        &.alert-success {
-                            background-color: rgba(#ccff00, 0.2);
-                            border-color: #ccff00;
-                        }
-                    }
-
-                    h3 {
-                        margin: 2rem 0;
-
-                        span {
-                            border-bottom: 0.1rem solid #ccff00;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+@import "picture/presentation";
